--- a/index.html
+++ b/index.html
@@ -1137,12 +1137,12 @@
       background: #fff;
     }
 
-	    .likelihood-grid {
-	      margin-top: 8px;
-	      display: grid;
-	      gap: 10px;
-	      grid-template-columns: repeat(3, minmax(250px, 1fr));
-	    }
+		    .likelihood-grid {
+		      margin-top: 8px;
+		      display: grid;
+		      gap: 10px;
+		      grid-template-columns: repeat(2, minmax(320px, 1fr));
+		    }
 	
 	    .closure-filters {
 	      display: flex;
@@ -3213,7 +3213,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.36+20260209.1';
+    const APP_VERSION = 'v0.7.37+20260209.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -3968,11 +3968,22 @@
       ].join('||');
     }
 
-    function dealHelpKey(rec) {
-      // Prefer stable Monday item IDs; fall back to deal name.
+    function dealHelpKeys(rec) {
+      // Return multiple keys so popup rows (which may not carry item_id) and
+      // dataset rows (which do) both resolve to the same stored flag.
+      const out = [];
       const id = String(rec && (rec.monday_item_id || rec.item_id || rec.id || rec.deal_id) || '').trim();
-      if (id) return `id:${id}`;
-      return `deal:${String(rec && rec.deal || '').trim().toLowerCase()}`;
+      const deal = String(rec && rec.deal || '').trim().toLowerCase();
+      if (id) out.push(`id:${id}`);
+      if (deal) out.push(`deal:${deal}`);
+      // Always return at least one stable-ish key.
+      if (!out.length) out.push('deal:(blank)');
+      return out;
+    }
+
+    // Backwards-compatible single key helper.
+    function dealHelpKey(rec) {
+      return dealHelpKeys(rec)[0];
     }
 
     function isHelpFlagValue(v) {
@@ -3980,8 +3991,10 @@
     }
 
     function isHelpNeeded(rec) {
-      const k = dealHelpKey(rec);
-      if (isHelpFlagValue(likelihoodState[k])) return true;
+      const keys = dealHelpKeys(rec);
+      for (const k of keys) {
+        if (isHelpFlagValue(likelihoodState[k])) return true;
+      }
       // Back-compat: if the old per-row likelihood key was used and set to Help.
       const oldKey = likelihoodRecordKey(rec);
       if (likelihoodState[oldKey] === LIKELIHOOD_HELP) return true;
@@ -4026,7 +4039,7 @@
         if (!matchedSeller(rec, metric && metric.seller_label ? metric.seller_label : null)) {
           // If metric didn't carry seller info, we'll filter in updateLikelihoodSummaryForSeller instead.
         }
-        if (isHelpNeeded(rec)) out.helpDealSet.add(dealHelpKey(rec));
+        if (isHelpNeeded(rec)) dealHelpKeys(rec).forEach((k) => out.helpDealSet.add(k));
       });
 
       // NOTE: This function no longer populates closures; closures are computed per-seller in
@@ -4056,8 +4069,8 @@
         const tr = document.createElement('tr');
         const dealTd = document.createElement('td');
         if (opts.alertDealSet) {
-          const hkey = dealHelpKey(r);
-          if (opts.alertDealSet.has(hkey)) {
+          const hit = dealHelpKeys(r).some((k) => opts.alertDealSet.has(k));
+          if (hit) {
             const ico = document.createElement('span');
             ico.className = 'alert-ico';
             ico.textContent = '!';
@@ -4108,7 +4121,7 @@
       deals.forEach((rec) => {
         if (!passCutoff(rec.intro_date)) return;
         if (!matchedSeller(rec)) return;
-        if (isHelpNeeded(rec)) helpSet.add(dealHelpKey(rec));
+        if (isHelpNeeded(rec)) dealHelpKeys(rec).forEach((k) => helpSet.add(k));
         const q = scorecardQuarterLabelForDate(rec.start_date);
         if (!q) return;
         const size = dealSizeValue(bestDealSize(rec));
@@ -5514,11 +5527,11 @@
             opt.textContent = label;
             select.appendChild(opt);
           });
-          const key = dealHelpKey(r);
+          const keys = dealHelpKeys(r);
           const checked = isHelpNeeded(r);
           // Opportunistic migration: if old-style key had help, write to new key.
-          if (checked && !isHelpFlagValue(likelihoodState[key]) && !isHistoricalView) {
-            likelihoodState[key] = true;
+          if (checked && !isHistoricalView) {
+            keys.forEach((k) => { if (!isHelpFlagValue(likelihoodState[k])) likelihoodState[k] = true; });
           }
           select.value = checked ? 'yes' : '';
           if (isHistoricalView) {
@@ -5526,8 +5539,8 @@
             select.title = 'Read-only in historical version view';
           } else {
             select.addEventListener('change', () => {
-              if (select.value === 'yes') likelihoodState[key] = true;
-              else delete likelihoodState[key];
+              if (select.value === 'yes') keys.forEach((k) => { likelihoodState[k] = true; });
+              else keys.forEach((k) => { delete likelihoodState[k]; });
               persistLocalStateBundle();
               queueSharedStorePush();
               if (activePopupSeller) updateLikelihoodSummaryForSeller(activePopupSeller);
