--- a/index.html
+++ b/index.html
@@ -3303,7 +3303,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.42+20260209.1';
+    const APP_VERSION = 'v0.7.43+20260209.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -6748,7 +6748,8 @@
       });
 
       // Ensure consistent stage row ordering.
-      const ordered = ['Intro', 'Qualification', 'Capabilities', 'Problem Scoping', 'Contracting', 'Commercial Proposal'];
+      // Note: For this tab, keep "Commercial Proposal" before "Contracting" per user request.
+      const ordered = ['Intro', 'Qualification', 'Capabilities', 'Problem Scoping', 'Commercial Proposal', 'Contracting'];
       const normalizedOut = {};
       ordered.forEach((k) => {
         if (out[k]) normalizedOut[k] = out[k];
