--- a/index.html
+++ b/index.html
@@ -3371,7 +3371,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.46+20260210.1';
+    const APP_VERSION = 'v0.7.47+20260210.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -5672,7 +5672,7 @@
         .trim();
     }
 
-    function scorecardRecordMatchKeys(rec) {
+	    function scorecardRecordMatchKeys(rec) {
       const out = [];
       const id = String(rec && (rec.monday_item_id || rec.item_id || rec.id || rec.deal_id) || '').trim();
       const dealNorm = normalizeDealTextForKey(rec && rec.deal);
@@ -5682,8 +5682,20 @@
       if (dealNorm && intro) out.push(`deal:${dealNorm}||intro:${intro}`);
       if (dealNorm && month) out.push(`deal:${dealNorm}||month:${month}`);
       if (dealNorm) out.push(`deal:${dealNorm}`);
-      return out;
-    }
+	      return out;
+	    }
+
+	    function scorecardCanonicalKey(rec) {
+	      const id = String(rec && (rec.monday_item_id || rec.item_id || rec.id || rec.deal_id) || '').trim();
+	      if (id) return `id:${id}`;
+	      const dealNorm = normalizeDealTextForKey(rec && rec.deal);
+	      const intro = String(rec && rec.intro_date || '').trim().slice(0, 10);
+	      const month = String(rec && rec.created_month || '').trim();
+	      if (dealNorm && intro) return `deal:${dealNorm}||intro:${intro}`;
+	      if (dealNorm && month) return `deal:${dealNorm}||month:${month}`;
+	      if (dealNorm) return `deal:${dealNorm}`;
+	      return 'deal:(blank)';
+	    }
 
     function buildPrevStageLookupForScorecard(prevDataset, sellerLabel, cutoffMonth) {
       // key -> Set(stageNumber). We keep all candidates because the same deal
@@ -6008,33 +6020,25 @@
 	        kpis.className = 'score-kpis';
 	        const details = filteredMetric.kpi_details || {};
 
-	        const prevLookup = prevDataset ? buildPrevStageLookupForScorecard(prevDataset, seller, cutoffMonth) : null;
-	        const countMoves = (currRows) => {
-	          let up = 0;
-	          let down = 0;
-	          (currRows || []).forEach((r) => {
-	            if (!prevLookup) return;
-	            const curN = stageNumber(r.stage);
-	            const keys = scorecardRecordMatchKeys(r);
-	            let prevN = null;
-	            for (const k of keys) {
-	              if (prevLookup.has(k)) { prevN = pickClosestStageCandidate(prevLookup.get(k), curN); break; }
-	            }
-	            if (prevN == null || curN == null) return;
-	            if (curN > prevN) up += 1;
-	            else if (curN < prevN) down += 1;
-	          });
-	          return { up, down };
+	        // For KPI/funnel tickers: show ▲ added to bucket, ▼ removed from bucket (vs prev).
+	        const countAddsRemoves = (currRows, prevRows) => {
+	          const currSet = new Set((currRows || []).map(scorecardCanonicalKey));
+	          const prevSet = new Set((prevRows || []).map(scorecardCanonicalKey));
+	          let added = 0;
+	          let removed = 0;
+	          currSet.forEach((k) => { if (!prevSet.has(k)) added += 1; });
+	          prevSet.forEach((k) => { if (!currSet.has(k)) removed += 1; });
+	          return { added, removed };
 	        };
 
 	        const entries = [
-	          ['Stage 1-6 Total', Number(filteredMetric.stage_1_6_count || 0), p16, 'stage_1_6'],
-	          ['Stage 1-2', Number(filteredMetric.stage_1_2_count || 0), p12, 'stage_1_2'],
-	          ['Stage 3-4', Number(filteredMetric.stage_3_4_count || 0), p34, 'stage_3_4'],
-	          ['Stage 5-6', Number(filteredMetric.stage_5_6_count || 0), p56, 'stage_5_6'],
-	          ['Won/Lost (7-8)', Number(filteredMetric.stage_7_8_count || 0), p78, 'stage_7_8'],
+	          ['Stage 1-6 Total', Number(filteredMetric.stage_1_6_count || 0), d16, p16, 'stage_1_6'],
+	          ['Stage 1-2', Number(filteredMetric.stage_1_2_count || 0), d12, p12, 'stage_1_2'],
+	          ['Stage 3-4', Number(filteredMetric.stage_3_4_count || 0), d34, p34, 'stage_3_4'],
+	          ['Stage 5-6', Number(filteredMetric.stage_5_6_count || 0), d56, p56, 'stage_5_6'],
+	          ['Won/Lost (7-8)', Number(filteredMetric.stage_7_8_count || 0), d78, p78, 'stage_7_8'],
 	        ];
-	        entries.forEach(([label, currCount, prevCount, detailKey]) => {
+	        entries.forEach(([label, currCount, currRows, prevCount, detailKey]) => {
 	          const box = document.createElement('div');
 	          box.className = 'kpi clickable-kpi';
 	          const l = document.createElement('div');
@@ -6048,8 +6052,12 @@
 	          const v = document.createElement('div');
 	          v.className = 'kpi-value';
 	          v.textContent = money.format(currCount || 0);
-	          const moves = countMoves(details[detailKey] || []);
-	          const tick = movementTickersEl(moves.up, moves.down);
+	          const prevRows = prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers
+	            ? (((((prevDataset.scorecard.sellers || {})[(seller === 'Overall' ? 'All (unique deals)' : seller)] || {}).kpi_details || {})[detailKey]) || [])
+	            : [];
+	          const prevRowsFiltered = filterRecords(prevRows);
+	          const diff = countAddsRemoves(currRows || [], prevRowsFiltered || []);
+	          const tick = movementTickersEl(diff.added, diff.removed);
 	          vRow.appendChild(v);
 	          vRow.appendChild(tick);
 	          box.appendChild(l);
@@ -6068,25 +6076,26 @@
         shapeTitle.textContent = 'Funnel Shape (By Stage)';
         shape.appendChild(shapeTitle);
 	        const counts = {};
-	        const moveCounts = {};
+	        const stageCurrSets = {};
 	        const details2 = filteredMetric.kpi_details || {};
 	        [...(details2.stage_1_6 || []), ...(details2.stage_7_8 || [])].forEach((r) => {
 	          const st = String(r.stage || '').trim() || '(blank)';
 	          counts[st] = (counts[st] || 0) + 1;
-	          if (!moveCounts[st]) moveCounts[st] = { up: 0, down: 0 };
-	          if (prevLookup) {
-	            const curN = stageNumber(st);
-	            const keys = scorecardRecordMatchKeys(r);
-	            let prevN = null;
-	            for (const k of keys) {
-	              if (prevLookup.has(k)) { prevN = pickClosestStageCandidate(prevLookup.get(k), curN); break; }
-	            }
-	            if (prevN != null && curN != null) {
-	              if (curN > prevN) moveCounts[st].up += 1;
-	              else if (curN < prevN) moveCounts[st].down += 1;
-	            }
-	          }
+	          if (!stageCurrSets[st]) stageCurrSets[st] = new Set();
+	          stageCurrSets[st].add(scorecardCanonicalKey(r));
 	        });
+	        const stagePrevSets = {};
+	        if (prevDataset && prevDataset.scorecard && prevDataset.scorecard.sellers) {
+	          const bucketKey = seller === 'Overall' ? 'All (unique deals)' : seller;
+	          const pm = (prevDataset.scorecard.sellers || {})[bucketKey] || {};
+	          const pDetails = (pm.kpi_details || {});
+	          const pRows = [...filterRecords(pDetails.stage_1_6), ...filterRecords(pDetails.stage_7_8)];
+	          pRows.forEach((r) => {
+	            const st = String(r.stage || '').trim() || '(blank)';
+	            if (!stagePrevSets[st]) stagePrevSets[st] = new Set();
+	            stagePrevSets[st].add(scorecardCanonicalKey(r));
+	          });
+	        }
         const stages = ['1. Intro','2. Qualification','3. Capability','4. Problem Scoping','5. Contracting','6. Commercial Proposal','7. Win','8. Loss'];
         const maxV = Math.max(1, ...stages.map((s) => Number(counts[s] || 0)));
 	        stages.forEach((label) => {
@@ -6110,8 +6119,12 @@
 	          const cSpan = document.createElement('span');
 	          cSpan.textContent = money.format(value);
 	          v.appendChild(cSpan);
-	          const m = moveCounts[label] || { up: 0, down: 0 };
-	          v.appendChild(movementTickersEl(m.up, m.down));
+	          const currSet = stageCurrSets[label] || new Set();
+	          const prevSet = stagePrevSets[label] || new Set();
+	          let added = 0, removed = 0;
+	          currSet.forEach((k) => { if (!prevSet.has(k)) added += 1; });
+	          prevSet.forEach((k) => { if (!currSet.has(k)) removed += 1; });
+	          v.appendChild(movementTickersEl(added, removed));
 	          row.appendChild(l);
 	          row.appendChild(track);
 	          row.appendChild(v);
